envs/dev-aws/security.tf
resource "aws_security_group" "web" {
  name        = "tp2-web-sg"
  description = "Autorise HTTP public et SSH restreint"
  vpc_id      = aws_vpc.main.id
  ingress {
    description = "HTTP depuis internet"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH restreint a mon IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${var.my_ip}/32"]
  }
  ingress {
    description = "SSH ouvert temporairement pour le runner GitHub Actions (deploiement Ansible)"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "Dashboard Netdata restreint a mon IP"
    from_port   = 19999
    to_port     = 19999
    protocol    = "tcp"
    cidr_blocks = ["${var.my_ip}/32"]
  }
  tags = {
    Name = "tp2-web-sg"
  }
}
